--- a/designation.html
+++ b/designation.html
@@ -15,9 +15,9 @@
 <body>
     <div class="container mt-4">
         <div class="header d-flex justify-content-between align-items-center">
-            <button class="btn rounded-circle" ><img src="/static/images/arow1.png" alt="" class="nav-icon"></button>
+            <a  href="#" class="btn rounded-circle" ><img src="/static/images/arrow-left.png" alt="" class="nav-icon"></a>
             <h2 class="m-0 font">Designation</h2>
-            <button class="btn rounded-circle"><img src="/static/images/volume.png" alt="" class="nav-icon"></button>
+            <a href="#" class="btn rounded-circle"><img src="/static/images/adjust.png" alt="" class="nav-icon"></a>
         </div>
         <div class="interaction d-flex justify-content-start mt-5">
             <div class="text-center me-4">
@@ -80,12 +80,11 @@
       <!-- Navigation Section -->
       <nav class="navbar fixed-bottom bg-light rounded-5 col-6">
         <div class="container-fluid justify-content-around">
-            <a href="#" class="nav-link active"><i class="bi bi-house icon1"></i></a>
-            <a href="#" class="nav-link"><i class="fa-regular fa-compass icon1"></i></a>
-            <a href="#" class="nav-link"><img src="/static/images/round.jpeg" alt="" class="icon1"></a>
-            
-            <a href="#" class="nav-link"><i class="bi bi-people icon1"></i></a>
-            <a href="#" class="nav-link"><i class="bi bi-chat icon1"></i></a>
+            <a href="#" class="nav-link active "><img src="static/images/home.png" class="icon1"></a>
+            <a href="#" class="nav-link "><img src="/static/images/compass.png" class="icon1" alt=""></a>
+            <a href="#" class="nav-link "><img src="/static/images/round.png" class="icon1" alt=""></a>
+            <a href="#" class="nav-link "><img src="/static/images/people.png" class="icon1" alt=""></a>
+            <a href="#" class="nav-link "><img src="/static/images/comment.png" class="icon1" alt=""></a>
         </div>
     </nav>
 
