--- a/view.html
+++ b/view.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designation</title>
+    <title>view</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -15,9 +15,9 @@
 <body>
     <div class="container mt-4">
         <div class="header d-flex justify-content-between align-items-center">
-            <button class="btn rounded-circle" ><img src="/static/images/arow1.png" alt="" class="nav-icon"></button>
+            <a  href="#" class="btn rounded-circle" ><img src="/static/images/arrow-left.png" alt="" class="nav-icon"></a>
             <h2 class="m-0 font">Viewed my Profile</h2>
-            <button class="btn rounded-circle"><img src="/static/images/volume.png" alt="" class="nav-icon"></button>
+            <a href="#" class="btn rounded-circle"><img src="/static/images/adjust.png" alt="" class="nav-icon"></a>
         </div>
         <!-- <div class="interaction d-flex justify-content-start mt-5">
             <div class="text-center me-4">
@@ -78,14 +78,14 @@
 
     <!-- navigation bar bottom fixed -->
      <!-- Navigation Section -->
-    <nav class="navbar fixed-bottom bg-light rounded-5 mb-3 justify-content-end">
+     <nav class="navbar fixed-bottom bg-light rounded-5 col-6">
         <div class="container-fluid justify-content-around">
-            <a href="#" class="nav-link"><i class="bi bi-house-door icon1"></i></a>
-            <a href="#" class="nav-link"><img src="/static/images/navigator.png" alt="" class="icon1"></a>
-            <a href="#" class="nav-link"><img src="/static/images/color-wheel.png" alt="" class="icon1"></a>
-            <a href="view.html" class="nav-link"><i class="bi bi-people icon1"></i></a>
-            <a href="#" class="nav-link"><i class="bi bi-chat icon1"></i></a>
-        </div>  
+            <a href="#" class="nav-link active "><img src="static/images/home.png" class="icon1"></a>
+            <a href="#" class="nav-link "><img src="/static/images/compass.png" class="icon1" alt=""></a>
+            <a href="#" class="nav-link "><img src="/static/images/round.png" class="icon1" alt=""></a>
+            <a href="#" class="nav-link "><img src="/static/images/people.png" class="icon1" alt=""></a>
+            <a href="#" class="nav-link "><img src="/static/images/comment.png" class="icon1" alt=""></a>
+        </div>
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
