--- a/designation.html
+++ b/designation.html
@@ -38,7 +38,7 @@
                         <div class="card-body">
                             <h5 class="card-title">James, 20</h5>
                             <p class="card-text">1.3 km away<br>HANOVER</p>
-                            <span class="badge">100% Match</span>
+                            <span class="badge1">100% Match</span>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Eddie, 23</h5>
                             <p class="card-text">2 km away<br>DORTMUND</p>
-                            <span class="badge">94% Match</span>
+                            <span class="badge1">94% Match</span>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Brandon, 20</h5>
                             <p class="card-text">2.5 km away<br>HAMBURG</p>
-                            <span class="badge">89% Match</span>
+                            <span class="badge1">89% Match</span>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Alfredo, 20</h5>
                             <p class="card-text">2.5 km away<br>HAMBURG</p>
-                            <span class="badge">80% Match</span>
+                            <span class="badge1">80% Match</span>
                         </div>
                     </div>
                 </div>
