--- a/notification.html
+++ b/notification.html
@@ -25,7 +25,7 @@
         <div class="notification success">
             <div class="notification-content">
                 <span><img src="/static/images/success.png" alt="" height="20px" width="20px">  Successfully Message</span>
-                <small>Today 10:30PM</small>
+                <small class="s1">Today 10:30PM</small>
             </div>
             <button class="close-button">&times;</button>
         </div>
@@ -34,7 +34,7 @@
         <div class="notification alert">
             <div class="notification-content">
                 <span><img src="/static/images/alert.png" alt="" height="18px" width="18px">   Alert Message</span>
-                <small>Today 10:30PM</small>
+                <small class="s1">Today 10:30PM</small>
             </div>
             <button class="close-button">&times;</button>
         </div>
@@ -43,7 +43,7 @@
         <div class="notification error">
             <div class="notification-content">
                 <span><img src="/static/images/error.png" alt="" height="22px" width="22px">  Error Message</span>
-                <small>Today 10:30PM</small>
+                <small class="s1">Today 10:30PM</small>
             </div>
             <button class="close-button">&times;</button>
         </div>
